# NTRViewer

./: CMakeLists.txt
cmake/: FindFFMPEG.cmake  FindLibJpegTurbo.cmake
resources/: MacOSXBundleInfo.plist.in
